@@ -27,13 +27,23 @@ has skip_deps => (
     default => sub { $_[0]->payload->{skip_deps} || '' },
 );
 
-# skip these dependencies
+# skip these files
 has skip_files => (
     is  => 'ro',
     isa => 'Maybe[Str]',
     lazy => 1,
     default => sub { $_[0]->payload->{skip_files} || '' },
 );
+
+# skip these plugins from @Basic bundle
+has skip_plugin => (
+    is => 'ro',
+    isa => 'ArrayRef[Str]',
+    lazy => 1,
+    default => sub { $_[0]->payload->{skip_plugin} || [] },
+);
+
+sub mvp_multivalue_args { qw(skip_plugin) }
 
 sub configure {
     my $self = shift;
@@ -45,12 +55,12 @@ sub configure {
 
     my %basic_opts = (
         '-bundle' => '@Basic',
-        '-remove' => [ 'Readme' ],
+        '-remove' => [ 'Readme', @{ $self->skip_plugin } ],
     );
 
     if ($self->no_cpan) {
         $basic_opts{'-remove'}
-            = [ 'Readme', 'UploadToCPAN' ];
+            = [ 'Readme', @{ $self->skip_plugin }, 'UploadToCPAN' ];
         $self->add_plugins('FakeRelease');
     }
 
@@ -176,6 +186,10 @@ the C<AutoPrereqs> Plugin as the C<skip> attribute.
 
 If you provide a value to the C<skip_files> option then it will be passed to
 the C<PruneFiles> Plugin as the C<match> attribute.
+
+If you provide one or more instaces of the C<skip_plugin> option, then the
+values will be removed from the list of plugins imported from the C<@Basic>
+Plugin Bundle.
 
 =head1 TIPS
 
